--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<link rel="preconnect" href="https://unpkg.com/" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+			rel="stylesheet"
+		/>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,6 +17,6 @@
 		<div style="display: contents">%sveltekit.body%</div>
 
 		<!-- Boxicons CDN Link -->
-		<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+		<script defer src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 	</body>
 </html>
